# prog-paralela-trabalho

./: .gitignore  CMakeLists.txt  README.md  build.sh  execute.sh  install.sh  python_install.sh
.github/workflows/: cmake.yml
results/: MPI_Prim_2.csv  MPI_Prim_4.csv  MPI_Prim_8.csv  OMP_Prim_2.csv  OMP_Prim_4.csv  OMP_Prim_8.csv  SEQ_Prim.csv  parallel_python_n2.csv  parallel_python_n4.csv  parallel_python_n8.csv  seq_python.csv
src/: CMakeLists.txt  main.c  matrix_generator.c  matrix_generator.h
src/graphs/: graphs.py
src/mpi_prim/: mpi_prim.c  mpi_prim.h
src/omp_prim/: omp_prim.c  omp_prim.h
src/prim/: sequential_prim.c  sequential_prim.h
src/prim_python/: parallel_python_n2.csv  parallel_python_n4.csv  parallel_python_n6.csv  parallel_python_n8.csv  prim.py  prim_parallel.py  seq.csv  seq_python.csv
src/stats/: csv.c  csv.h  stats.c  stats.h
src/utils/: matrix_generator.c  matrix_generator.h  prim.c  prim.h  test_utils.c  test_utils.h
test/: CMakeLists.txt  main_test.cpp
test/omp_prim/: omp_prim_test.cpp
test/prim/: sequential_prim_test.cpp
test/utils/: matrix_generator_test.cpp  test_utils_test.cpp
